--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.20",
     "next": "^16.1.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
